# Stocktrade

./: README.md  pyproject.toml
tests/: test_stocktrade.py
